# Draggable-Popups

./: CMakeLists.txt  README.md  about.md  changelog.md  logo.psd  mod.json
resources/: bin.psd
src/: ClosePopupTarget.cpp  ClosePopupTarget.hpp  DraggablePopupManager.cpp  DraggablePopupManager.hpp  NodeVisitWrapper.cpp  NodeVisitWrapper.hpp
src/hooks/: SetDPopup.cpp  SetIDPopup.hpp
src/platform/android/: touch.cpp
src/platform/desktop/: mouse.cpp  touch.cpp
